--- a/View/PaginaPrincipal.xaml
+++ b/View/PaginaPrincipal.xaml
@@ -35,7 +35,7 @@
         <StackLayout Grid.Row="2" Orientation="Horizontal" BackgroundColor="#6b47e9" HeightRequest="60">
             <Button x:Name="btnMapa" Text="Mapa" TextColor="White" BackgroundColor="#6b47e9" HorizontalOptions="FillAndExpand" />
             <Button x:Name="btnMusculo" Text="Musculo" TextColor="White" BackgroundColor="#6b47e9" HorizontalOptions="FillAndExpand" Clicked="btnMusculo_Clicked" />
-            <Button x:Name="btnSintomas" Text="Sintoma" TextColor="White" BackgroundColor="#6b47e9" HorizontalOptions="FillAndExpand" />
+            <Button x:Name="btnSintomas" Text="Sintoma" TextColor="White" BackgroundColor="#6b47e9" HorizontalOptions="FillAndExpand" Clicked="btnSintomas_Clicked" />
         </StackLayout>
     </Grid>
 </ContentPage>
