--- a/View/PaginaPrincipal.xaml
+++ b/View/PaginaPrincipal.xaml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="KineApp.Views.PaginaPrincipal">
+             x:Class="KineApp.Views.PaginaPrincipal"
+              NavigationPage.HasNavigationBar="False">
     <Grid BackgroundColor="White">
         <!-- Barra superior -->
         <Grid.RowDefinitions>
