--- a/View/SintomaPage.xaml
+++ b/View/SintomaPage.xaml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="KineApp.View.SintomaPage"
-             Title="SintomaPage">
-    
+             x:Class="KineApp.Views.SintomaPage"
+             Title="SintomaPage"
+             NavigationPage.HasNavigationBar="False">
+
     <StackLayout Padding="10">
-        <Label Text="Lista de Sintomas"
+        <Label Text="Lista de Síntomas"
                FontSize="24"
                HorizontalOptions="Center" />
 
-        <CollectionView x:Name="SintomasCollectionView">
+
+        <CollectionView x:Name="SintomasCollectionView"
+                            VerticalOptions="FillAndExpand">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <StackLayout Padding="10" Orientation="Vertical">
                         <Label Text="{Binding Nombre}"
-                               FontSize="20" />
-                        <!-- Aquí puedes agregar más detalles si lo deseas -->
+                                   FontSize="20" />
                     </StackLayout>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
     </StackLayout>
-
 </ContentPage>
