--- a/View/SintomaIdPage.xaml
+++ b/View/SintomaIdPage.xaml
@@ -1,12 +1,46 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="KineApp.View.SintomaIdPage"
-             Title="SintomaIdPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             x:Class="KineApp.Views.SintomaIdPage" x:Name="SintomaNombre"
+             Title="{Binding Nombre}">
+    <ScrollView>
+        <StackLayout Padding="10">
+            <Label Text="Músculos y Síntomas"
+                   FontSize="24"
+                   HorizontalOptions="Center" />
+
+            <Label Text="Músculos"
+                   FontSize="25"
+                   TextColor="#6b47e9"
+                   FontAttributes="Bold"
+                   Margin="0,10,0,0" />
+            <CollectionView x:Name="MusculosCollectionView"  HeightRequest="200" >
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <StackLayout Padding="10" Orientation="Vertical">
+                            <Label Text="{Binding Nombre}"
+                                   FontSize="20" />
+                        </StackLayout>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+
+            <Label Text="Partes"
+                   FontSize="25"
+                   TextColor="#6b47e9"
+                   FontAttributes="Bold"
+                   Margin="0,20,0,0" />
+            
+            <CollectionView x:Name="SintomasCollectionView" HeightRequest="200">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <StackLayout Padding="10" Orientation="Vertical">
+                            <Label Text="{Binding Nombre}"
+                                   FontSize="20" />
+                        </StackLayout>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+        </StackLayout>
+    </ScrollView>
 </ContentPage>
