--- a/View/ParteDetallePage.xaml
+++ b/View/ParteDetallePage.xaml
@@ -19,13 +19,19 @@
                    TextColor="#6b47e9"
                    FontAttributes="Bold"
                    Margin="0,10,0,0" />
-            <CollectionView x:Name="MusculosCollectionView" HeightRequest="300" SelectionChanged="MusculosCollectionView_SelectionChanged">
+            <CollectionView x:Name="MusculosCollectionView" HeightRequest="300" >
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
-                        <StackLayout Padding="10" Orientation="Vertical">
+                        <Grid Padding="10" ColumnDefinitions="*,Auto">
                             <Label Text="{Binding Nombre}"
-                                   FontSize="20" />
-                        </StackLayout>
+                               FontSize="20"
+                               VerticalOptions="Center"
+                               Grid.Column="0" />
+                            <Button Text="+"
+                                TextColor="White"
+                                VerticalOptions="Center"
+                                Grid.Column="1" Clicked="Button_Clicked_Musculo" />
+                        </Grid>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
@@ -35,13 +41,19 @@
                    TextColor="#6b47e9"
                    FontAttributes="Bold"
                    Margin="0,20,0,0" />
-            <CollectionView x:Name="SintomasCollectionView" HeightRequest="200" SelectionChanged="SintomasCollectionView_SelectionChanged">
+            <CollectionView x:Name="SintomasCollectionView" HeightRequest="300">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
-                        <StackLayout Padding="10" Orientation="Vertical">
+                        <Grid Padding="10" ColumnDefinitions="*,Auto">
                             <Label Text="{Binding Nombre}"
-                                   FontSize="20" />
-                        </StackLayout>
+                               FontSize="20"
+                               VerticalOptions="Center"
+                               Grid.Column="0" />
+                            <Button Text="+"
+                                TextColor="White"
+                                VerticalOptions="Center"
+                                Grid.Column="1"  Clicked="Button_Clicked_Sintoma"/>
+                        </Grid>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
