--- a/View/PaginaPrincipal.xaml
+++ b/View/PaginaPrincipal.xaml
@@ -12,7 +12,7 @@
         </Grid.RowDefinitions>
 
         <StackLayout Grid.Row="0" Orientation="Horizontal" BackgroundColor="#6b47e9" HeightRequest="60">
-            <Button x:Name="btnCliente" Text="Cliente" TextColor="White" BackgroundColor="#6b47e9" HorizontalOptions="Start" Padding="20,0,10,0" FontFamily="monserat" FontSize="15" />
+            <Button x:Name="btnCliente" Text="Cliente" TextColor="White" BackgroundColor="#6b47e9" HorizontalOptions="Start" Padding="20,0,10,0" FontFamily="monserat" FontSize="15" Clicked="btnCliente_Clicked"/>
             <Button x:Name="btnTurno" Text="Turnos" TextColor="White" BackgroundColor="#6b47e9" HorizontalOptions="Start" FontFamily="monserat" FontSize="15"  />
         </StackLayout>
 
