--- a/View/PaginaPrincipal.xaml
+++ b/View/PaginaPrincipal.xaml
@@ -13,7 +13,7 @@
 
         <StackLayout Grid.Row="0" Orientation="Horizontal" BackgroundColor="#6b47e9" HeightRequest="60">
             <Button x:Name="btnCliente" Text="Cliente" TextColor="White" BackgroundColor="#6b47e9" HorizontalOptions="Start" Padding="20,0,10,0" FontFamily="monserat" FontSize="15" Clicked="btnCliente_Clicked"/>
-            <Button x:Name="btnTurno" Text="Turnos" TextColor="White" BackgroundColor="#6b47e9" HorizontalOptions="Start" FontFamily="monserat" FontSize="15"  />
+            <Button x:Name="btnTurno" Text="Turnos" TextColor="White" BackgroundColor="#6b47e9" HorizontalOptions="Start" FontFamily="monserat" FontSize="15" Clicked="btnTurno_Clicked" />
         </StackLayout>
 
         <!-- Contenido principal -->
