--- a/View/ClientePage.xaml
+++ b/View/ClientePage.xaml
@@ -40,12 +40,12 @@
                                 <RowDefinition Height="Auto"/>
                                 <RowDefinition Height="Auto"/>
                             </Grid.RowDefinitions>
-                            <Label Text="{Binding Nombre}" FontSize="20" Grid.Column="0" Grid.Row="0" />
-                            <Label Text="{Binding Apellido}" FontSize="20" Grid.Column="1" Grid.Row="0" />
-                            <Label Text="{Binding ObraSocial}" FontSize="16" Grid.Column="0" Grid.Row="1" />
-                            <Label Text="{Binding Sesiones}" FontSize="16" Grid.Column="1" Grid.Row="1" />
-                            <Button Text="Editar" Grid.Column="0" Grid.Row="2" Clicked="OnEditarClienteClicked" CommandParameter="{Binding .}" />
-                            <Button Text="Info" Grid.Column="1" Grid.Row="2" Clicked="OnInfoClienteClicked" CommandParameter="{Binding .}" />
+                            <Label Text="{Binding Nombre}" FontSize="20" Grid.Column="0" Grid.Row="0" Padding="5"/>
+                            <Label Text="{Binding Apellido}" FontSize="20" Grid.Column="1" Grid.Row="0" Padding="5"/>
+                            <Label Text="{Binding ObraSocial}" FontSize="16" Grid.Column="0" Grid.Row="1" Padding="5"/>
+                            <Label Text="{Binding Sesiones}" FontSize="16" Grid.Column="1" Grid.Row="1" Padding="5"/>
+                            <Button Text="Editar" Grid.Column="0" Grid.Row="2" Clicked="OnEditarClienteClicked" CommandParameter="{Binding .}" Padding="5"/>
+                            <Button Text="Info" Grid.Column="1" Grid.Row="2" Clicked="OnInfoClienteClicked" CommandParameter="{Binding .}" Padding="5"/>
                         </Grid>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
