--- a/View/MusculoIdPage.xaml
+++ b/View/MusculoIdPage.xaml
@@ -4,33 +4,34 @@
              x:Class="KineApp.Views.MusculoIdPage"
              Title="Detalle del Músculo">
     <ScrollView>
-        <StackLayout Padding="10">
+        <StackLayout Padding="10" BackgroundColor="White">
             <Image x:Name="ParteImage" HeightRequest="300" Aspect="AspectFit" Margin="0,0,0,10">
                 <Image.GestureRecognizers>
                     <TapGestureRecognizer  Tapped="OnImageTapped" />
                 </Image.GestureRecognizers>
             </Image>
-            <Label Text="Parte y Síntomas"
-                   FontSize="24"
-                   HorizontalOptions="Center" />
+
+            <Label x:Name="MusculoNombreLabel" FontSize="24" HorizontalOptions="Center" Margin="0,10,0,0" />
+            <Label Text="Las X representan los puntos de activación. No hay diferencias entre las X blancas y negras. La área roja es el dolor causado por el punto de activación y el rojo más oscuro significa que más personas experimentan dolor en esa área." FontSize="24" HorizontalOptions="Center" Margin="0,10,0,0"/>
 
             <Label Text="Partes"
                    FontSize="25"
                    TextColor="#6b47e9"
                    FontAttributes="Bold"
                    Margin="0,10,0,0" />
-            <CollectionView x:Name="MusculosCollectionView" HeightRequest="300" >
+            <CollectionView x:Name="MusculosCollectionView" HeightRequest="300">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <Grid Padding="10" ColumnDefinitions="*,Auto">
                             <Label Text="{Binding Nombre}"
-                               FontSize="20"
-                               VerticalOptions="Center"
-                               Grid.Column="0" />
+                                   FontSize="20"
+                                   VerticalOptions="Center"
+                                   Grid.Column="0" />
                             <Button Text="+"
-                                TextColor="White"
-                                VerticalOptions="Center"
-                                Grid.Column="1" Clicked="Button_Clicked_Parte"/>
+                                    TextColor="White"
+                                    VerticalOptions="Center"
+                                    Grid.Column="1"
+                                    Clicked="Button_Clicked_Parte" />
                         </Grid>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
@@ -46,13 +47,14 @@
                     <DataTemplate>
                         <Grid Padding="10" ColumnDefinitions="*,Auto">
                             <Label Text="{Binding Nombre}"
-                               FontSize="20"
-                               VerticalOptions="Center"
-                               Grid.Column="0" />
+                                   FontSize="20"
+                                   VerticalOptions="Center"
+                                   Grid.Column="0" />
                             <Button Text="+"
-                                TextColor="White"
-                                VerticalOptions="Center"
-                                Grid.Column="1"  Clicked="Button_Clicked_Sintomas"/>
+                                    TextColor="White"
+                                    VerticalOptions="Center"
+                                    Grid.Column="1"
+                                    Clicked="Button_Clicked_Sintomas" />
                         </Grid>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
