--- a/View/TurnosPage.xaml
+++ b/View/TurnosPage.xaml
@@ -5,10 +5,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              x:Class="KineApp.Views.TurnosPage"
-             Title="Gestión de Turnos">
+             Title="Gestión de Turnos" Padding="15" >
     <ContentPage.Content>
         <ScrollView>
-            <StackLayout Padding="20">
+            <StackLayout Padding="20" >
                 <!-- Formulario para agregar turnos -->
                 <Frame CornerRadius="10" Padding="20" Margin="0,0,0,10">
                     <StackLayout Spacing="10">
