--- a/View/ClientePage.xaml
+++ b/View/ClientePage.xaml
@@ -2,9 +2,9 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="KineApp.Views.ClientePage"
-             Title="Clientes">
+             Title="Clientes" Padding="15" >
     <ScrollView>
-        <StackLayout Padding="10">
+        <StackLayout Padding="20" >
             <StackLayout Orientation="Vertical" Padding="10">
                 <!-- Formulario de cliente -->
                 <Entry x:Name="NombreEntry" Placeholder="Nombre" />
