--- a/View/MusculoPage.xaml
+++ b/View/MusculoPage.xaml
@@ -1,10 +1,10 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="KineApp.Views.MusculoPage"
-             Title="MusculoPage"
-             NavigationPage.HasNavigationBar="False">
+             Title="Musculos " Padding="10" 
+             >
 
-    <StackLayout Padding="10">
+    <StackLayout Padding="10" >
         <Label Text="Lista de Músculos"
                FontSize="24"
                HorizontalOptions="Center" />
