--- a/View/SintomaIdPage.xaml
+++ b/View/SintomaIdPage.xaml
@@ -2,9 +2,9 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="KineApp.Views.SintomaIdPage"
-             Title="Detalle del Síntoma">
+             Title="Detalle del Síntoma" Padding="15">
     <ScrollView>
-        <StackLayout Padding="10">
+        <StackLayout Padding="10" >
             <Label Text="Parte y Síntomas"
                    FontSize="24"
                    TextColor="#6b47e9"
@@ -14,7 +14,7 @@
                    FontSize="25"
                    TextColor="#6b47e9"
                    FontAttributes="Bold"
-                   Margin="0,10,0,0" />
+                   Margin="0,10,0,10" />
             <CollectionView x:Name="MusculosCollectionView" HeightRequest="300" >
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
