--- a/View/SintomaPage.xaml
+++ b/View/SintomaPage.xaml
@@ -2,13 +2,13 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="KineApp.Views.SintomaPage"
-             Title="SintomaPage"
-             NavigationPage.HasNavigationBar="False">
+             Title="Pagina Sintomas" Padding="15" 
+             >
 
-    <StackLayout Padding="10">
+    <StackLayout Padding="10" >
         <Label Text="Lista de Síntomas"
                FontSize="24"
-               HorizontalOptions="Center" />
+               HorizontalOptions="Center" Margin="0,10,0,10" />
 
 
         <CollectionView x:Name="SintomasCollectionView"
