--- a/View/ClienteIdInfoPage.xaml
+++ b/View/ClienteIdInfoPage.xaml
@@ -2,19 +2,40 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="KineApp.Views.ClienteIdInfoPage"
-             Title="Cliente Info" Padding="15"  >
+             Title="Cliente Info"
+             Padding="15">
     <ScrollView>
-        <StackLayout Padding="10" >
-            <Label x:Name="NombreLabel" FontSize="20" />
-            <Label x:Name="ApellidoLabel" FontSize="20" />
-            <Label x:Name="DniLabel" FontSize="20" />
-            <Label x:Name="TelefonoLabel" FontSize="20" />
-            <Label x:Name="CorreoLabel" FontSize="20" />
-            <Label x:Name="ObraSocialLabel" FontSize="20" />
-            <Label x:Name="SesionesLabel" FontSize="20" />
-            <Label x:Name="DolorLabel" FontSize="20" />
-            <Label x:Name="EstampilladoLabel" FontSize="20" />
-            <Label x:Name="MusculoLabel" FontSize="20" />
+        <StackLayout Padding="10" Spacing="15">
+            <Frame BorderColor="#6b47e9" CornerRadius="10" Padding="10" HasShadow="True">
+                <Label x:Name="NombreLabel" FontSize="20" TextColor="#6b47e9" FontAttributes="Bold"/>
+            </Frame>
+            <Frame BorderColor="#6b47e9" CornerRadius="10" Padding="10" HasShadow="True">
+                <Label x:Name="ApellidoLabel" FontSize="20" TextColor="#6b47e9" FontAttributes="Bold"/>
+            </Frame>
+            <Frame BorderColor="#6b47e9" CornerRadius="10" Padding="10" HasShadow="True">
+                <Label x:Name="DniLabel" FontSize="20" TextColor="#6b47e9" FontAttributes="Bold"/>
+            </Frame>
+            <Frame BorderColor="#6b47e9" CornerRadius="10" Padding="10" HasShadow="True">
+                <Label x:Name="TelefonoLabel" FontSize="20" TextColor="#6b47e9" FontAttributes="Bold"/>
+            </Frame>
+            <Frame BorderColor="#6b47e9" CornerRadius="10" Padding="10" HasShadow="True">
+                <Label x:Name="CorreoLabel" FontSize="20" TextColor="#6b47e9" FontAttributes="Bold"/>
+            </Frame>
+            <Frame BorderColor="#6b47e9" CornerRadius="10" Padding="10" HasShadow="True">
+                <Label x:Name="ObraSocialLabel" FontSize="20" TextColor="#6b47e9" FontAttributes="Bold"/>
+            </Frame>
+            <Frame BorderColor="#6b47e9" CornerRadius="10" Padding="10" HasShadow="True">
+                <Label x:Name="SesionesLabel" FontSize="20" TextColor="#6b47e9" FontAttributes="Bold"/>
+            </Frame>
+            <Frame BorderColor="#6b47e9" CornerRadius="10" Padding="10" HasShadow="True">
+                <Label x:Name="DolorLabel" FontSize="20" TextColor="#6b47e9" FontAttributes="Bold"/>
+            </Frame>
+            <Frame BorderColor="#6b47e9" CornerRadius="10" Padding="10" HasShadow="True">
+                <Label x:Name="EstampilladoLabel" FontSize="20" TextColor="#6b47e9" FontAttributes="Bold"/>
+            </Frame>
+            <Frame BorderColor="#6b47e9" CornerRadius="10" Padding="10" HasShadow="True">
+                <Label x:Name="MusculoLabel" FontSize="20" TextColor="#6b47e9" FontAttributes="Bold"/>
+            </Frame>
         </StackLayout>
     </ScrollView>
 </ContentPage>
