--- a/View/SintomaPage.xaml
+++ b/View/SintomaPage.xaml
@@ -5,7 +5,7 @@
              Title="Pagina Sintomas" Padding="15" 
              >
 
-    <StackLayout Padding="10" >
+    <StackLayout >
         <Label Text="Lista de Síntomas"
                FontSize="24"
                HorizontalOptions="Center" Margin="0,10,0,10" />
