--- a/View/TurnosPage.xaml
+++ b/View/TurnosPage.xaml
@@ -10,7 +10,7 @@
         <ScrollView>
             <StackLayout>
                 <!-- Formulario para agregar turnos -->
-                <Frame CornerRadius="10" Padding="20" Margin="0,0,0,10" BackgroundColor="#6b47e9">
+                <Frame CornerRadius="10" Padding="20" Margin="0,0,0,10" BackgroundColor="#5C35E5">
                     <StackLayout Spacing="10">
                         <Label Text="Agregar Turno" FontAttributes="Bold" FontSize="24" HorizontalOptions="Center"/>
                         <Picker x:Name="ClientePicker" Title="Seleccionar Cliente"
@@ -18,7 +18,7 @@
                                 ItemDisplayBinding="{Binding NombreCompleto}" />
                         <DatePicker x:Name="FechaPicker" Format="dd/MM/yyyy" />
                         <TimePicker x:Name="HoraPicker" Format="HH:mm" />
-                        <Button Text="Guardar" Clicked="GuardarTurno_Clicked" BackgroundColor="#6b47e0" TextColor="White"/>
+                        <Button Text="Guardar" Clicked="GuardarTurno_Clicked" BackgroundColor="#6b47e9" TextColor="White"/>
                     </StackLayout>
                 </Frame>
 
@@ -27,25 +27,15 @@
                 <CollectionView x:Name="TurnosCollectionView" ItemsSource="{Binding Turnos}">
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
-                            <Frame CornerRadius="10" Padding="10" BackgroundColor="#e0e0e0" Margin="0,0,0,10">
+                            <Frame CornerRadius="10" Padding="10" BackgroundColor="#5C35E5" Margin="0,0,0,10">
                                 <StackLayout>
-                                    <Grid>
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="*" />
-                                            <ColumnDefinition Width="Auto" />
-                                            <ColumnDefinition Width="Auto" />
-                                        </Grid.ColumnDefinitions>
-                                        <Label Text="{Binding Cliente.NombreCompleto}" FontSize="18" Grid.Column="0" VerticalOptions="Center" />
-                                        <Label Text="{Binding Fecha, StringFormat='{0:dd/MM/yyyy HH:mm}'}" FontSize="18" Grid.Column="1" VerticalOptions="Center" />
-                                    </Grid>
-                                    <Grid ColumnSpacing="10" Padding="10">
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="*" />
-                                            <ColumnDefinition Width="*" />
-                                        </Grid.ColumnDefinitions>
-                                        <Button Text="Completado" Clicked="CompletadoTurno_Clicked" Grid.Column="0" BackgroundColor="#6b47e9" TextColor="White"/>
-                                        <Button Text="Editar" Clicked="EditarTurno_Clicked" Grid.Column="1" BackgroundColor="#6b47e9" TextColor="White"/>
-                                    </Grid>
+                                    <Label Text="{Binding Cliente.NombreCompleto}" FontSize="18" />
+                                    <Label Text="{Binding Fecha, StringFormat='{0:dd/MM/yyyy HH:mm}'}" FontSize="18" />
+                                    <Label Text="{Binding Cliente.ObraSocial}" FontSize="18" />
+                                    <HorizontalStackLayout Spacing="10" Padding="10">
+                                        <Button Text="Completado" Clicked="CompletadoTurno_Clicked" BackgroundColor="#6b47e9" TextColor="White" WidthRequest="150" Margin="15,0,0,0"/>
+                                        <Button Text="Editar" Clicked="EditarTurno_Clicked" BackgroundColor="#6b47e9" TextColor="White" WidthRequest="150"  Margin="0,0,15,0"/>
+                                    </HorizontalStackLayout>
                                 </StackLayout>
                             </Frame>
                         </DataTemplate>
@@ -53,16 +43,24 @@
                 </CollectionView>
 
                 <!-- Contador de sesiones completadas -->
-                <Label Text="{Binding CompletedSessions, StringFormat='Sesiones Completadas este Mes: {0}'}" FontAttributes="Bold" FontSize="18" HorizontalOptions="Center" Margin="0,20,0,0" />
+                <Label x:Name="CompletedSessionsCountLabel" FontAttributes="Bold" FontSize="24" HorizontalOptions="Center" />
+
                 <!-- Lista de sesiones completadas -->
-                <Label Text="Sesiones Completadas" FontAttributes="Bold" FontSize="24" HorizontalOptions="Center" />
-                <CollectionView x:Name="CompletedSessionsCollectionView" ItemsSource="{Binding CompletedSessionsList}">
+                <Label Text="Sesiones completadas este mes" FontAttributes="Bold" FontSize="24" HorizontalOptions="Center" />
+                <CollectionView x:Name="CompletedSessionsCollectionView" ItemsSource="{Binding CompletedTurnos}">
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
-                            <Frame CornerRadius="10" Padding="10" BackgroundColor="#e0e0e0" Margin="0,0,0,10">
+                            <Frame CornerRadius="10" Padding="10" BackgroundColor="#6b47e9" Margin="0,0,0,10">
                                 <StackLayout>
                                     <Label Text="{Binding Cliente.NombreCompleto}" FontSize="18" />
                                     <Label Text="{Binding Fecha, StringFormat='{0:dd/MM/yyyy HH:mm}'}" FontSize="18" />
+                                    <Label Text="{Binding Cliente.ObraSocial}" FontSize="18"/>
+                                    <Button Text="+"
+                                                TextColor="White"
+                                                VerticalOptions="Center"
+                                                Clicked="Button_Clicked_Cliente"
+                                                BindingContext="{Binding Cliente}"
+                                                Background="#5C35E5"/>
                                 </StackLayout>
                             </Frame>
                         </DataTemplate>
